# photorealistic-rendering

./: .gitignore  CMakeLists.txt  setpath.sh
data/scenes/bunny-both/: bunny_opt.xml
data/scenes/bunny-env/: bunny_opt.xml  bunny_ref.xml
data/scenes/bunny-tex/: bunny_opt.xml  bunny_ref.xml
data/scenes/bunny-transparent/: bunny.mtl  bunny_opt.xml  bunny_ref.xml
data/scenes/cbox-tex/: cbox_ref.xml
data/scenes/cbox-tex-256/: cbox_opt.xml
data/scenes/material-testball/: opt_scene.xml  ref_scene.xml
data/texture/: generate.bash
doc/: .gitignore
doc/presentation/20211005/: main.tex
doc/presentation/20211005/src/: conclusion.tex  intro.tex  method-1.tex  method-2.tex
doc/presentation/20211125/src/: background.tex  method-3.tex  result.tex
doc/project/presentation/: main.tex
doc/project/presentation/src/: conclusion.tex  intro.tex  method-1.tex  method-2.tex  method-3.tex  related-work.tex
doc/project/report/: master.tex
doc/project/report/bib/: mybib.bib  umax.m
doc/project/report/figures/: r08_consumption.eps
doc/project/report/sections/: 1_introduction.tex  1_preface.tex  2_convexity.tex  2_relatedwork.tex  3_2_duality_2.tex  3_duality_1.tex  3_method.tex  4_result.tex  5_conclusion.tex  5_simulation.tex  _kkt.tex  appAname.tex  frontpage.tex  references.tex
doc/project/report/setup/: preamble.tex
ops/: CMakeLists.txt  image_laplacian.cpp  image_laplacian.py  image_laplcian_cuda_kernel.h
src/: _veach.py  config.py  estimate.py  filter.py  optimize.py
src/util/: loss.py  optimizer.py  render_helper.py  render_util.py
